# holochain-1

./: .gitignore  Cargo.toml  default.nix  rustfmt.toml
.circleci/: config.yml
crates/diagnostics/: Cargo.toml
crates/dna_util/: Cargo.toml
crates/dna_util/src/: lib.rs
crates/hdk/: Cargo.toml
crates/holochain/: Cargo.toml
crates/holochain/benches/: bench.rs
crates/holochain/src/: fixt.rs  local_network_tests.rs  test_utils.rs
crates/holochain/src/conductor/: cell.rs  conductor.rs  dna_store.rs  entry_def_store.rs  error.rs  handle.rs  p2p_store.rs
crates/holochain/src/core/: queue_consumer.rs  ribosome.rs  sys_validate.rs
crates/holochain/src/fixt/: curve.rs
crates/holochain/src/test_utils/: conductor_setup.rs  host_fn_api.rs
crates/holochain/tests/: agent_scaling.rs  inline_zome_sketch.rs  ser_regression.rs  speed_tests.rs  websocket.rs
crates/holochain_cascade/: Cargo.toml
crates/holochain_cascade/src/: authored_test.rs  lib.rs  network_tests.rs  test.rs
crates/holochain_lmdb/: Cargo.toml
crates/holochain_nucleus/: Cargo.toml
crates/holochain_nucleus/src/: dna.rs  fixt.rs  lib.rs  test_utils.rs
crates/holochain_p2p/: Cargo.toml
crates/holochain_state/: Cargo.toml
crates/holochain_state/src/: cascade.rs  chain_sequence.rs  element_buf.rs  fixt.rs  lib.rs  source_chain.rs  test_utils.rs  validation_receipts_db.rs  wasm.rs
crates/holochain_types/: Cargo.toml
crates/holochain_types/src/: app.rs  fixt.rs  test_utils.rs
crates/holochain_zome_types/src/: fixt.rs
crates/test_utils/wasm/: Cargo.toml
(+71 files in other folders)
