[package]
name = "TODO"
version = "0.0.1"
description = "TODO"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "hdk" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]

[dev-dependencies]
